fix(style): fix overflow of body

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@
     color: #fff;
     box-sizing: border-box;
     border: none;
-    overflow: hidden;
+    overflow: auto;
     outline: none;
 }
 
@@ -22,6 +22,9 @@ body{
     background-repeat: no-repeat;
 }
 
+a, i{
+    overflow: hidden;
+}
 
 /* --------- Main section style */
 /* Main container styling */
